--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ ktor_version=2.3.6
 kotlin_version=1.9.20
 logback_version=1.4.11
 kotlin.code.style=official
+exposed_version = 0.44.1
+h2_version = 2.2.224
