--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
-agp = "8.4.0-rc02"
+agp = "8.4.0"
+googleServices = "4.4.1"
+ksp = "1.9.10-1.0.13"
 firebaseBom = "32.8.1"
 koinAndroid = "3.5.3"
 kotlin = "1.9.10"
@@ -43,4 +45,6 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+googleServices = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 
