--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
-agp = "8.4.0"
+agp = "8.4.1"
 googleServices = "4.4.1"
-ksp = "1.9.10-1.0.13"
-firebaseBom = "32.8.1"
+ksp = "2.0.0-1.0.21"
+firebaseBom = "33.0.0"
 koinAndroid = "3.5.3"
-kotlin = "1.9.10"
-core-ktx = "1.13.0"
+kotlin = "2.0.0"
+core-ktx = "1.13.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.7.0"
+lifecycle-runtime-ktx = "2.8.0"
 activity-compose = "1.9.0"
-compose-bom = "2024.04.01"
-materialIconsExtended = "1.6.6"
+compose-bom = "2024.05.00"
+materialIconsExtended = "1.6.7"
 navigation-compose = "2.7.7"
 room = "2.6.1"
 
@@ -47,4 +47,5 @@ androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "googleServices" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
