--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,20 @@
 [versions]
-agp = "8.4.1"
-googleServices = "4.4.1"
+agp = "8.4.2"
+googleServices = "4.4.2"
+kotlinxSerializationJson = "1.7.1"
 ksp = "2.0.0-1.0.21"
-firebaseBom = "33.0.0"
+firebaseBom = "33.1.1"
 koinAndroid = "3.5.3"
 kotlin = "2.0.0"
 core-ktx = "1.13.1"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.8.0"
+androidx-test-ext-junit = "1.2.1"
+espresso-core = "3.6.1"
+lifecycle-runtime-ktx = "2.8.3"
 activity-compose = "1.9.0"
-compose-bom = "2024.05.00"
-materialIconsExtended = "1.6.7"
-navigation-compose = "2.7.7"
+compose-bom = "2024.06.00"
+materialIconsExtended = "1.6.8"
+navigation-compose = "2.8.0-beta04"
 room = "2.6.1"
 
 [libraries]
@@ -31,6 +32,7 @@ androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinAndroid" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
